--- a/app/src/sass/utils/_variables.scss
+++ b/app/src/sass/utils/_variables.scss
@@ -9,7 +9,8 @@ $dark: #0000;
 $orange-main: #D3573C; /* name */
 $red-main:#901C1C;/* location */
 
-$grey:#525252; /* tagline txt / price txt */ 
+$grey:#525252; /* tagline txt /  */ 
+$grey2: #757575; /* price txt */
 $greySpecial: #C4C4C4; /* navtag border */
 $lightgrey: #FAFAFA; /* bg infos block */
 
