--- a/app/src/sass/utils/_mixins.scss
+++ b/app/src/sass/utils/_mixins.scss
@@ -1,6 +1,8 @@
 
 @use "sass:map";
-
+/* ======================================== */
+/* MIXINS */
+/* ======================================== */
 /* ======================================== */
 /* BREAKPOINTS*/
 /* ======================================== */
