adding sass loader

--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -1,7 +1,7 @@
 /* ================================== */
 /* Fonts */
 /* ================================== */
-
+/* 
 @font-face { 
     font-family:'DMSans-regular';
     src: url('../assets/fonts/DMSans/DMSans-regular.ttf') format('ttf');
@@ -31,4 +31,4 @@
     src: url('../assets/fonts/DMSans/DMSans-bold-italic.ttf') format('ttf');
     src: url('../assets/fonts/DMSans/DMSans-bold-italic.eot') format('eot');
     src: url('../assets/fonts/DMSans/DMSans-bold-italic.woff') format('woff');
-}
+} */
