Migration of code created in the 'no-webpack version' of project - phase 1

--- a/src/sass/components/_photographer-infos.scss
+++ b/src/sass/components/_photographer-infos.scss
@@ -2,6 +2,9 @@
 /* PHOTOGRAPHER INFOS RULES  */
 /* =============================================== */
 
+photographer-component { 
+
+
 .photographer {
     border:2px solid red;
     
@@ -52,4 +55,5 @@
         bottom: 0;
     }
 
+}
 }
