--- a/src/sass/base/_main-rules.scss
+++ b/src/sass/base/_main-rules.scss
@@ -30,4 +30,15 @@ a, input, button {cursor: pointer; }
 h1,h2, h3,h4, h5, h6 { font-weight: normal;}
 
 
+.visuallyHidden {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
 
