--- a/src/sass/components/_photographer-infos.scss
+++ b/src/sass/components/_photographer-infos.scss
@@ -1,38 +1,44 @@
 /* =============================================== */
 /* PHOTOGRAPHER INFOS RULES  */
 /* =============================================== */
-
-
+// FYI : --home = homepage / --page = photographer page
+// phographers profiles have a few differences when displayed on homepage or own page
 
 
 .photographer {
     border:2px solid red;
-    
+
     &--home {
         @include flex(column, nowrap);text-align: center;
-        @include max-600px { flex-basis:100%;}
-        @include min-600px { flex-basis:30%;}
+        /* @include max-600px { flex-basis:100%;}
+        @include min-600px { height: 400px; min-width:350px;} */
     }
     &--page{ 
         width:100%;
         @include flex(row-reverse, nowrap);
-        justify-content: space-between; align-items: center;
+        justify-content: space-between; 
+        // align-items: center;
         @include min-600px{ padding: 25px; }
         @include min-1200px { padding: 45px; background-color:$lightgrey;}
     }
+    &__text-infos.page { @include min-1200px{height:200px;} } // photographer profile H when inline on own page
+    
     &__pic {
         border-radius:50%;
         object-fit: cover;
         &.home {width:12.5em; height:12.5em; margin:1em auto;} 
         &.page {@include max-1200px {width:6.25em; height:6.25em;}@include min-1200px{width:12.5em; height:12.5em;}}
     }
+    &__name.page, .main-btn--contact { @include min-600px{display: inline;}} // from 600 photographer page : contact btn = inline by side of name
+    .main-btn--contact { @include max-600px{position: absolute; bottom:15px; }} // mobile photographer page: contact btn at bottom center
+
     &__name {
-        color: $orange-main; text-transform: capitalize;
+        color: $orange-main; text-transform: capitalize; margin:0;
         &.home { font-size: 2.25em; margin: 0; }
         &.page { @include max-1200px{font-size: 2.25em; } @include min-1200px {font-size:4em;} }
     }
     &__location {
-        color: $red-main; text-transform: capitalize;
+        color: $red-main; text-transform: capitalize;margin:0;
         &.home {font-size: 0.825em;text-transform: capitalize; margin:0.15em auto; }
         &.page { @include max-1200px{font-size: 0.8125em; } @include min-1200px {font-size:1.5em;}}
     }
@@ -47,12 +53,27 @@
     
     /* likes and price  */
     &__bottom-infos  {
-        color:$dark;
-        background-color:$orange-main;
-        font-size: 1.25em;
-        font-weight: 500;
-        position: absolute;
-        bottom: 0;
+        @include max-1200px {display: none;} // only visible from 1200px
+        @include min-1200px {
+            position: fixed;
+            bottom: 0; right:0;
+            @include flex(row, nowrap); // infos are on a row
+            justify-content: space-between;
+            align-items: center; // align infos vertically
+
+            background-color:$orange-main;
+            height:70px; width: 375px;
+            border-top-right-radius:5px;
+            border-top-left-radius:5px;
+            .photographer__likes * { display: inline;} // keeps number+icon on the same line
+            .photographer__likes, 
+            .photographer__price {
+                color:$dark;
+                font-size: 1.25em;
+                font-weight: 500;
+                margin:5%;
+            }
+        }
     }
 
 }
