--- a/src/sass/components/_picture.scss
+++ b/src/sass/components/_picture.scss
@@ -6,29 +6,69 @@
 .gallery {
     background-color: lightseagreen;
     width: 100%;
-    @include max-1200px {@include flex(row, wrap); justify-content: space-between;}
-    @include min-1200px {@include flex(column, wrap); }
-
-    .photo-item {
-        border: 1px lightcoral;
-        @include max-1200px { width: 100%; }
-        @include min-1200px {
-            width: 350px;height:350px;
-
-            img { max-width:100%; height:auto; background-color: blueviolet;}
-
-            .photo-infos {
-                @include flex(row, nowrap);
-                color: $red-main;
-                @include min-1200px { font-size: 1.25em; }
-                .photo-likes, .photo-price { font-weight:500; }
-                @include max-1200px {
-                    .photo-title,
-                    .photo-likes { font-size: 0.875em;}
-                    .photo-price { font-size: 0.75em;}
-                }
-            }
-        }
-    
+    @include max-1200px {@include flex(row, wrap);}
+    @include min-1200px {@include flex(column, wrap); 
     }
+
+    media-item-component {
+
+        border: 5px solid orange;
+        overflow: hidden;
+        display:flex;
+        @include max-992px { 
+            flex-basis:100%; // takes all width
+            height: 210px;
+        }
+        @include min-992px { 
+            flex-basis:30%; // takes 1/3 width (= 3 items per row)
+            height: 350px;
+            max-width: 350px; // limits expansion when item = 30% width - to keep proportions on big screens 
+        }
+
+        min-width: 335px; // limits shrinking when item = 30% width
+
+            
+            .mediaItem {
+    
+                .pic-wrapper {
+                    border: 7px solid green;
+                    @include border-radius(5px);
+                    
+                    @include max-992px { height:170px; }
+                    @include min-992px { height:300px; }
+    
+                    overflow: hidden;
+    
+                    img {
+                        // width: 100%; height:100%;
+                        height:auto;
+                        display: block;
+                        // max-height:100%;
+                        min-height: 100%; min-width: 100%;
+                    }
+                    .mediaItem-infos {
+                        @include flex(row, nowrap); // photo infos = in a row
+                    align-items: center; // text = vertically centered
+                    justify-content: space-between;
+    
+                    @include max-992px { height:40px; }// ======================= to review ( useless if using text default margins?
+                    @include min-992px { height:50px; }// ======================= to review ( useless if using text default margins?
+                    @include min-1200px { font-size: 1.25em; }
+                    
+                    .mediaItem-title { flex-basis: 60%;} // title takes most width
+                    color: $red-main;
+                    
+                    .mediaItem-likes, .mediaItem-price { font-weight: 500; }
+                    .mediaItem-likes *{ display: inline;}
+                    @include max-1200px {
+                        .mediaItem-title,
+                        .mediaItem-likes { font-size: 0.875em; }
+                        .mediaItem-price { font-size: 0.75em; }
+                    }
+                    }
+                }
+    
+            }
+            
+        }
 }
