--- a/src/main.scss
+++ b/src/main.scss
@@ -9,6 +9,7 @@
 @import "../src/sass/components/photographer-infos";
 @import "../src/sass/components/picture";
 @import "../src/sass/components/nav-tags";
+@import "../src/sass/components/dropdown";
 
 @import "../src/sass/layouts/header";
 @import "../src/sass/layouts/modal";
