--- a/src/main.scss
+++ b/src/main.scss
@@ -13,6 +13,7 @@
 
 @import "../src/sass/layouts/header";
 @import "../src/sass/layouts/modal";
+@import "../src/sass/layouts/lightbox";
 
 @import "../src/sass/pages/homepage";
 @import "../src/sass/pages/photographer-page";
