--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -1,34 +1,35 @@
 // body {margin : 0 !important; } //----- to review : see _photographer-page.scss
 
-.lightbox__main-wrapper {
-    width: 100vw; height: 100vh;
-    background-color: lightblue;}
+.lightbox-main-wrapper {
+    width: 100vw; height: 100vh;position: absolute;
+    background-color: lightblue;
+    z-index:5;
+}
+    
+    .lightbox {
+        border: 5px solid violet;
+        width:1050px;height:900px; 
+        margin:auto;
+        position: relative;
+        
+    }
+    .lightbox ul {margin: 0;padding: 0;} 
 
-        .carousel.with-slidenav { padding-bottom: 2em;} // leave space at bottom for aria infos
-        .carousel.active {position: relative;}
-        .carousel {
-            border: 5px solid violet;
-            width:1050px;height:900px; 
-            margin:auto; padding-top:10%;
-            position: relative;
-            // overflow: hidden;    
-        }
-        .carousel ul {margin: 0;padding: 0;}
+    .lightbox.with-slidenav { padding-bottom: 2em;} // leave space at bottom for aria infos
+    .lightbox.active {position: relative;}
 
         // first ul : images display 
         // .slide / = li elements
         // ---------------------------------------
+        .lightbox-images li {height: 100%;width:100%; }
         .slide {height: 100%;background-size: cover;overflow: hidden; position: absolute;}
 
         .active .slide {
             border: 2px solid red;
-            position: relative;
-            //position: absolute;
             top: 0;
             display:block !important;
             transition: left .6s ease-out;
-            z-index: 200;
-            // visibility: hidden;
+            z-index: 6;
         }  
 
         .active .prev.slide {left: -100%; border: 2px solid yellow; }
@@ -39,29 +40,27 @@
         // = second ul
         // ---------------------------------------
         .controls { 
-            width:100%; // of carousel
+            width:100%; height:45%; // of lightbox
             position: absolute;
-            z-index: 5;
-            top: 45%;
+            z-index: 7;
+            top: 45%;  
             @include flex(row, nowrap);
             justify-content: space-between;
             button { 
                 color: $red-main;
-                background-color: lightblue;
+                background-color: green;
                 font-size:2em;
             }
             .btn-prev { left: -5px; }
             .btn-next { right: 5px; }
         }
 
-         // ---------------------------------------
+        // ---------------------------------------
         // third ul for accessibility additional infos/commands : 
-        // start/pause carousel / pictures indexes to navigate manually
+        // start/pause lightbox / pictures indexes to navigate manually
         // and check current active pic 
         .slidenav { 
-            width:100%;position: absolute; bottom:0;
+            width:100%;position: absolute; bottom:0;z-index: 8;
             border: 2px solid yellow;
-            @include flex(row, nowrap);
-            // overflow: hidden;
-            
+            @include flex(row, nowrap);            
         }
