--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -4,6 +4,8 @@
 
 .contact-modal__main-wrapper { // white bg
     @include min-600px{width:100vw; height:100vh;}
+    position: absolute; z-index:5;
+    background-color: lightcoral;
 
     .contact-modal__inner-wrapper {
         position: relative; // for cancel btn placement
@@ -11,24 +13,25 @@
         @include max-600px { width:100vw; height:100vh; } //------- to review (white bg margins)
         @include min-600px { width: 670px; margin: auto; @include border-radius(3px); }
 
-        .cancelModalBtn { 
-            position: absolute; 
-            @include max-600px {height:30px;width:30px; right:30px;top:25px;}
-            @include min-600px {height:50px;width:50px;right:50px;top:30px;}
-            i { 
-                @include icon-base; color: $white;
-                @include max-600px {font-size:2em !important;}
-                @include min-600px {font-size:4em !important;}}
-        }
+
         .fields-wrapper {
             margin: 30px 35px;
-            color: $dark;
-    
+            color: black;
+            
+            .cancelModalBtn { 
+                position: absolute; z-index: 7;
+                @include max-600px {height:30px;width:30px; right:30px;top:25px;}
+                @include min-600px {height:50px;width:50px;right:50px;top:30px;}
+                i .fa { 
+                    @include icon-base; color: $white;
+                    @include max-600px {font-size:2em !important;}
+                    @include min-600px {font-size:4em !important;}}
+            }
             h1 { 
                 @include max-600px {padding: 25px 0; font-size: 36px;}  //------- to review (mixins..)
                 @include min-600px {padding: 30px 0; font-size: 64px;}  //------- to review (mixins..)
                 margin: 0;
-                color: $dark;
+                color: black;
             }
     
             .field {
