MODAL CONTACT - methods - adding confirmation before closing

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,6 +10,7 @@
 @import "../src/sass/components/picture";
 @import "../src/sass/components/nav-tags";
 @import "../src/sass/components/dropdown";
+@import "../src/sass/components/confirm-box";
 
 @import "../src/sass/layouts/header";
 @import "../src/sass/layouts/modal";
