--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -10,6 +10,15 @@
         width:400px;height:200px; 
         margin:auto;
         position: relative;
+        .closeLightboxBtn { 
+            position: absolute; z-index: 9;
+            @include max-600px {height:30px;width:30px; right:30px;top:25px;}
+            @include min-600px {height:50px;width:50px;right:50px;top:30px;}
+            i .fa { 
+                @include icon-base; color: $white;
+                @include max-600px {font-size:2em !important;}
+                @include min-600px {font-size:4em !important;}}
+        }
         
         ul {margin: 0;padding: 0;} 
 
