--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -1,21 +1,22 @@
 // body {margin : 0 !important; } //----- to review : see _photographer-page.scss
 
 .lightbox-main-wrapper {
-    width: 100vw; height: 100vh;position: absolute;
-    background-color: lightblue;
+    width: 100vw; height: 100vh;
+    position: absolute;
+    display: flex;
+    border: 5px solid red;;
     z-index:5;
 
     .lightbox {
-        border: 5px solid violet;
-        width:400px;height:200px; 
+        width:800px;height:600px; 
         margin:auto;
         position: relative;
         .closeLightboxBtn { 
             position: absolute; z-index: 9;
-            @include max-600px {height:30px;width:30px; right:30px;top:25px;}
-            @include min-600px {height:50px;width:50px;right:50px;top:30px;}
-            i .fa { 
-                @include icon-base; color: $white;
+            @include max-600px {height:30px;width:30px; right:-50px;top:0;}
+            @include min-600px {height:50px;width:50px;right:-50px;top:0;}
+            .fa.fa-times { 
+                @include icon-base;  color: $red-main !important;
                 @include max-600px {font-size:2em !important;}
                 @include min-600px {font-size:4em !important;}}
         }
@@ -30,19 +31,17 @@
     // .slide / = li elements
     // ---------------------------------------
     .lightbox-images li {height: 100%;width:100%; }
-    .slide {height: 100%;background-size: cover;overflow: hidden; position: absolute;}
+    .slide {height: 100%; background-size: cover; overflow: hidden; position: absolute;}
     
     .active .slide {
-        border: 2px solid red;
         top: 0;
         display:block !important;
         transition: left .6s ease-out;
-        // z-index: 6;
     }  
     
-    .active .prev.slide {left: -100%; border: 2px solid yellow; }
-    .active .current.slide {z-index: 6;left: 0; border:2px solid blue;}
-    .active .next.slide {left: 100%; border:2px solid orange;}
+    .active .prev.slide {left: -100%; visibility: hidden; }
+    .active .current.slide {z-index: 6; left: 0; }
+    .active .next.slide {left: 100%; visibility: hidden;}
 }
 
 
@@ -57,9 +56,13 @@
             @include flex(row, nowrap);
             justify-content: space-between;
             button { 
-                color: $red-main;
-                background-color: green;
-                font-size:2em;
+                font-size:1em;
+                background-color: transparent;
+                .fa.fa-chevron-left,
+                .fa.fa-chevron-right { 
+                    @include icon-base;  color: $red-main !important;
+                    @include max-600px {font-size:2em !important;}
+                    @include min-600px {font-size:4em !important;}}
             }
             .btn-prev { left: -5px; }
             .btn-next { right: 5px; }
