--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -3,13 +3,15 @@
 /* ================================== */
 
 .contact-modal__main-wrapper { // white bg
-    @include min-600px{width:100vw; height:100vh;}
+    // @include min-600px{width:100vw; height:100vh;}
+    width:100vw; height:100vh;
     position: absolute; z-index:5;
-    background-color: lightcoral;
+    background: rgba(196, 196, 196, 0.4);
 
     .contact-modal__inner-wrapper {
         position: relative; // for cancel btn placement
         background-color: $orange-main;
+        @include box-shadow;
         @include max-600px { width:100vw; height:100vh; } //------- to review (white bg margins)
         @include min-600px { width: 670px; margin: auto; @include border-radius(3px); }
 
