--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -14,7 +14,7 @@
         .closeLightboxBtn { 
             position: absolute; z-index: 9;
             @include max-600px {height:30px;width:30px; right:-50px;top:0;}
-            @include min-600px {height:50px;width:50px;right:-50px;top:0;}
+            @include min-600px {height:50px;width:50px;right:-70px;top:0;}
             .fa.fa-times { 
                 @include icon-base;  color: $red-main !important;
                 @include max-600px {font-size:2em !important;}
@@ -44,15 +44,14 @@
     .active .next.slide {left: 100%; visibility: hidden;}
 }
 
-
-
         // = second ul
         // ---------------------------------------
         .controls { 
-            width:100%; height:45%; // of lightbox
+            width:120%; height:45%; // of lightbox
             position: absolute;
             z-index: 7;
-            top: 45%;  
+            top: 45%;
+            right:-10%;  
             @include flex(row, nowrap);
             justify-content: space-between;
             button { 
