--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -2,9 +2,9 @@
 
 .lightbox-main-wrapper {
     width: 100vw; height: 100vh;
-    position: absolute;
+    position: absolute;top: 0;
     display: flex;
-    border: 5px solid red;;
+    background: rgba(196, 196, 196, 0.8);
     z-index:5;
 
     .lightbox {
@@ -69,10 +69,11 @@
 
         // ---------------------------------------
         // third ul for accessibility additional infos/commands : 
-        // start/pause lightbox / pictures indexes to navigate manually
+        // pictures indexes to navigate manually
         // and check current active pic 
         .slidenav { 
-            width:100%;position: absolute; bottom:0;z-index: 8;
+            width:100%;position: absolute; 
+            bottom:0;z-index: 8;
             border: 2px solid yellow;
             @include flex(row, nowrap); 
             justify-content: space-between;           
