--- a/src/sass/components/_dropdown.scss
+++ b/src/sass/components/_dropdown.scss
@@ -17,6 +17,7 @@
         width: 170px; height:170px;
         @include border-radius(5px);
         background-color: $red-main;
+
         &.hide {
             @extend .dropdown-menu;
             height:50px;
@@ -28,15 +29,13 @@
             justify-content: space-between;
             padding: 0;
             background-color: transparent;
-            .fas .fa-angle-down 
-            .fas .fa-angle-up {
-                width: 1em;
-                color:white !important;
+            img { 
+                @include icon-base;
+                width:1.5em;
+                height:1em;
             }
         }
-       //  ul { visibility: hidden;}   
 
-   
 
         button, li { // select items
             width:90%; margin:auto; 
