--- a/src/sass/layouts/_lightbox.scss
+++ b/src/sass/layouts/_lightbox.scss
@@ -7,7 +7,7 @@
     background: rgba(196, 196, 196, 0.8);
     z-index:5;
 
-    .lightbox { border: 5px solid red;
+    .lightbox {
         
         width:800px;height:600px; 
         margin:auto;
@@ -25,7 +25,7 @@
         ul {margin: 0;padding: 0;}
         
 
-        .lightbox.with-slidenav { padding-bottom: 2em;} // leave space at bottom for aria infos
+        .lightbox.with-slidenav { padding-bottom: 3em;} // leave space at bottom for aria infos
         .lightbox.active {position: relative;}
     }
 
@@ -33,25 +33,39 @@
     // .slide / = li elements
     // ---------------------------------------
     .lightbox-images {
-
         li { 
             height: 100%;width:100%; // leave space for controls + img title ?
-            h5 { color: $red-main; }
         }   
     }
 
-    .slide {height: 100%; background-size: cover; overflow: hidden; position: absolute;}
+    .slide {
+        height: 100%; background-size: cover; position: absolute;
+    }
     
     .active .slide {
         top: 0;
         display:block !important;
         transition: left .6s ease-out;
-
-       //  top: -60px; // leave space at bottom for title ? 
     }  
     
-    .active .prev.slide {left: -100%; visibility: hidden; }
-    .active .current.slide {z-index: 6; left: 0; }
+    .active .prev.slide {
+        left: -100%;
+        visibility: hidden;
+    }
+    .active:not(.current).slide h5 {visibility: hidden;}
+
+    .active .current.slide {
+        z-index: 6; left: 0;
+        h5 {  // image title below lightbox
+            color: $red-main;
+            z-index: 7;
+            position: absolute;
+            bottom: -100px;
+            width: 100%;
+            height: 50px;
+            font-size:2em;
+        }
+    }
     .active .next.slide {left: 100%; visibility: hidden;}
 }
 
@@ -85,7 +99,7 @@
         .slidenav { 
             width:100%;position: absolute; 
             bottom:0;z-index: 8;
-            border: 2px solid yellow;
             @include flex(row, nowrap); 
-            justify-content: space-between;           
+            justify-content: space-between;
+            button.current { background-color: rgba(0, 187, 255, 0.995);}         
         }
